[tool.poetry]
name = "filter-1pux"
version = "0.1.0"
description = "Filter 1Password exported 1pux filtes to include specific vaults"
authors = [ "Sam McKelvie <dev@mckelvie.org>" ]
license = "MIT"
keywords = [ "password", "passphrase", "1Password", "vault", "keyring", "keychain" ]
readme = "README.md"
homepage = "https://github.com/sammck/filter-1pux"
repository = "https://github.com/sammck/filter-1pux.git"

[tool.poetry.dependencies]
python = "^3.8"
argcomplete = "^2.0.0"
jq = "^1.2.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
dunamai = "^1.9.0"
python-semantic-release = "^7.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
filter-1pux = 'filter_1pux.__main__:run'

[tool.semantic_release]
version_variable = 'filter_1pux/version.py:__version__'
version_toml = 'pyproject.toml:tool.poetry.version'
branch = 'main'
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
